# ApertusVR

common/include/: ApeIPluginManager.h  CMakeLists.txt
core/pluginManager/: ApePluginManagerImpl.cpp  ApePluginManagerImpl.h
core/scene/: ApeSceneImpl.cpp  CMakeLists.txt
core/scene/session/: ApeReplicaManagerConnection.cpp  ApeSceneSessionImpl.cpp
core/system/: ApeSystem.cpp
core/systemConfig/: ApeSystemConfigImpl.cpp
plugins/: CMakeLists.txt
plugins/assimpAssetLoader/: ApeAssimpAssetLoaderPlugin.cpp  ApeAssimpAssetLoaderPlugin.h
plugins/gyor/: ApeGyorPlugin.cpp  ApeGyorPlugin.h
plugins/ogreRender/: ApeOgreRenderPlugin.cpp  CMakeLists.txt
plugins/oisUserInput/: ApeOisUserInputPlugin.cpp
samples/: CMakeLists.txt
samples/mixedReality/configs/: CMakeLists.txt
samples/polimi/configs/guest_htcVive/: ApeSystem.json  CMakeLists.txt
samples/polimi/configs/host_monitor/: ApeOgreRenderPlugin.json  ApeSystem.json  CMakeLists.txt
samples/polimi/configs/local_htcVive/: ApeSystem.json  CMakeLists.txt
samples/polimi/configs/local_monitor/: ApeAssimpAssetLoaderPlugin.json  ApeSystem.json
